syntax = "proto3";

package payment;

option go_package = "ifpb.com/microservices-proto/golang/payment";

message CreatePaymentRequest {
    int64 customer_id = 1;
    int64 order_id = 2;
    float total_price = 3;
}

message CreatePaymentResponse {
    int64 payment_id = 1;
    int64 bill_id = 2;
}

service Payment {
    rpc Create(CreatePaymentRequest) returns (CreatePaymentResponse) {}
}

message OrderItem {
  int64 product_id = 1;
  int32 quantity = 2;
  float unit_price = 3;
}

message CreateOrderRequest {
  int64 customer_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  int64 order_id = 1;
}

service OrderService {
  rpc PlaceOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}